# probable-octo-journey-backend

./: .gitignore  Dockerfile  clickhouse-config.xml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  app.py
app/consumers/: __init__.py  __main__.py  handlers.py  middleware.py  utils.py
app/messaging/: __init__.py
app/models/: __init__.py  metrics.py
app/routes/: __init__.py  analytics.py  file.py  metrics.py  url.py
app/schemas/: analytics.py
app/types/: __init__.py
avro-schema/: url.avsc
invisible/: __init__.py  app.py  config.py
invisible/consumers/: __init__.py  __main__.py  handlers.py  middleware.py
invisible/messaging/: __init__.py
invisible/models/: __init__.py  metrics.py
invisible/routes/: __init__.py  file.py  metrics.py  text.py  url.py
invisible/schemas/: __init__.py
invisible/types/: __init__.py
tests/: conftest.py  test_cache.py  test_endpoints.py
tests/consumer/: test_handlers.py  test_middleware.py
tests/fixtures/: clickhouse.py  common.py  ip_database.py  producer.py  redis.py
